feat(backend): Translate classes and docs from config and feature packages to English
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>